--- a/ModernStandbyFix/ModernStandbyFix.csproj
+++ b/ModernStandbyFix/ModernStandbyFix.csproj
@@ -7,7 +7,7 @@
     <UseWPF>true</UseWPF>
     <PackageIcon>standbyIcon.png</PackageIcon>
     <ApplicationIcon>icon.ico</ApplicationIcon>
-    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+    <PublishSingleFile>true</PublishSingleFile>
   </PropertyGroup>
 
   <ItemGroup>
